argocd-declarative/manifests/grafana-app/grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
#          resources:
#            limits:
#              memory: "700Mi"
          volumeMounts:
            - name: grafana-vol
              mountPath: /var/lib/grafana
            - name: grafana-provisioning
              mountPath: /etc/grafana/provisioning
      restartPolicy: Always
      volumes:
        - name: grafana-vol
          persistentVolumeClaim:
#            claimName: grafana-pvc-local
            claimName: grafana-pvc-nfs-sc
        - name: grafana-provisioning
          persistentVolumeClaim:
#            claimName: grafana-pvc-local
            claimName: grafana-pvc-prov-nfs-sc
