argocd-declarative/manifests/grafana-app/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3000
#      nodePort: 32008
#  type: NodePort
  type: ClusterIP
